==1.3.2 (2009-10-01)==
* update "This Artist on Jamendo" URLs to work in Amarok 2.2

==1.3.1 (2009-06-13)==
* show a link to the artist on the Jamendo service in the service info
* adjust service infos colors to match Amarok 2.1

==1.3.0 (2009-03-06)==
* only download charts data when needed
* simple filtering is now possible (and therefore also creating bookmarks in Amarok 2.1)
* make it work with Qt 4.5

==1.2.0 (2009-02-03)==
* show a warning when downloading of charts failed
* beautify messages
* voting is finally integrated

==1.1.2 (2009-01-12)
* use latest Amarok api to show a custom service icon, emblems and album icons
* show date of next radio show/end of voting
* fix crash when dragging multiple items to the playlist

==1.1.1 (2008-11-22)==
* update to latest Amarok api, the updated script should still work with 2.0 beta 3 or later
* show correct license (GPL)

==1.1.0 (2008-11-11)==
* show podcasts of the radio shows for each month
* show past chart positions for each song in the service info
* added statusbar hint when downloading charts

==1.0.1 (2008-10-22)==
* make it run on Windows, too
* beautify code

==1.0.0 (2008-10-18)==
* first official release