@@ -30,7 +30,7 @@ Importer.loadQtBinding( "qt.gui" );     // for QPixmap
 Importer.loadQtBinding( "qt.xml" );
 
 service_name = "Free Music Charts";
-html = "<div style=\"background-color:#e6f3ff; height: 100%;\"><div style=\"background-color:#aacef3;\"><center><b>Free Music Charts</b></center><br/>The rules for the Darkerradio.com Free Music Charts are quite simple: the best 15 songs from the last month and five new ones are the candidates for the next voting. Only open music is allowed to take part, since February 2009 a song can stay in the charts for a time of six months max. You have up to five votes.<br/><br/>You can cast your votes by going to the menu bar: <i>Tools &rarr; Free Music Charts Voting</i></div></div>";
+html = "<div style=\"background-color:#e6f3ff; height: 100%;\"><div style=\"background-color:#aacef3;\"><center><b>Free Music Charts</b></center></div><br/>The rules for the Darkerradio.com Free Music Charts are quite simple: the best 15 songs from the last month and five new ones are the candidates for the next voting. Only open music is allowed to take part, since February 2009 a song can stay in the charts for a time of six months max. You have up to five votes.<br/><br/>You can cast your votes by going to the menu bar: <i>Tools &rarr; Free Music Charts Voting</i></div>";
 
 votingUrl = new QUrl( "http://www.darkerradio.com/free-music-charts/free-music-charts-voting/" );
 xmlUrl    = new QUrl( "http://krohlas.de/fmc.xml" );
@@ -90,7 +90,7 @@ function fmcShowsXmlParser( reply ) {
       Amarok.Window.Statusbar.longMessage( "<b>Free Music Charts</b><br/><br/>Download of charts seems to have <font color=red><b>failed</b></font>. Please check your internet connection." );
       item.itemName = "Download failed :(";
       item.callbackData = "failed";
-      script.insertItem( item )
+      script.insertItem( item );
     }
 
     var i = 0;
@@ -250,7 +250,7 @@ function onPopulate( level, callbackData, filter ) {
       item.infoHtml = "<div style=\"background-color:#e6f3ff; height:100%; margin: 0; padding: 0;\">";
       item.infoHtml = item.infoHtml + "<div style=\"background-color:#aacef3;\"><center><b>Chart positions of<br/>";
       item.infoHtml = item.infoHtml + elt.firstChildElement( "name" ).text() + "</div>";
-      item.infoHtml = item.infoHtml + "</b></center><br/><div style=\"background-color:#aacef3;\">";
+      item.infoHtml = item.infoHtml + "</b></center><div><br/>";
 
       item.infoHtml = item.infoHtml + fmcTracksXmlParser( elt2.text() );
 
